--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,7 @@ Installation
 Requirements
 ------------
 
- * Python 2.6, 2.7, or 3.3
+ * Python 2.6, 2.7, 3.3, 3.4, 3.5, or 3.6
  * Exempi 2.2.0+
  * Linux or OS X (see notes below for Windows)
 
